[package]
name = "abyssiniandb"
version = "0.1.3"
edition = "2021"
authors = ["aki <aki.akaguma@hotmail.com>"]
description = "The simple local key-value store."
keywords = ["key-value", "store", "database", "embedded-database"]
categories = ["database"]
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.58.1"
repository = "https://github.com/aki-akaguma/abyssiniandb"

[features]
default = ["vf_vu64", "rabuf_default", "htx_bitmap"]

# for developping
vf_u32u32 = []
vf_u64u64 = []
vf_vu64 = []

vf_node_u32 = []
vf_node_u64 = []

rabuf_default = ["rabuf_auto_buf_size", "rabuf_overf_rem_all", "rabuf_pin_zero", "rabuf_hash_turbo"]

rabuf_auto_buf_size = ["rabuf/buf_auto_buf_size"]
rabuf_overf_rem_all = ["rabuf/buf_overf_rem_all"]
rabuf_overf_rem_half = ["rabuf/buf_overf_rem_half"]
rabuf_pin_zero = ["rabuf/buf_pin_zero"]
rabuf_hash_turbo = ["rabuf/buf_hash_turbo"]

rabuf_lru = ["rabuf/buf_lru"]
rabuf_print_hits = ["rabuf/buf_print_hits"]
rabuf_stats = ["rabuf/buf_stats"]

# under development
next_straight = []
htx_bitmap = []
htx_print_hits = []

# for test
abyssiniandb_debug = []
rabuf_debug = ["rabuf/buf_debug"]
std_default_hasher = []
myhasher_george1 = []
myhasher_george2 = []
large_test = []

[dependencies]
rabuf = { version = "0.1", default-features=false }
vu64 = "0.1"
#rabuf = { git = "https://github.com/aki-akaguma/rabuf" }
#vu64 = { git = "https://github.com/aki-akaguma/vu64" }
#rabuf = { path = "../rabuf", default-features=false }
#vu64 = { path = "../vu64" }

itertools = "0.13"

[dev-dependencies]

[workspace]
members = [
    "xtask",
    "xtool",
]

